2007-10-20  Jonh Wendell  <jwendell@gnome.org>

	* pt_BR/pt_BR.po: Added Brazilian Portuguese translation by 
	  Alan Dantas and Pedro de Medeiros
	* Makefile.am: Added pt_BR to DOC_LINGUAS

2007-08-10  Hendrik Richter  <hendrikr@gnome.org>

	* de/*: Added German translation by 
				Thomas Konstantinides <gntr1@tkonstantinides.de>
	* Makefile.am: Added de to DOC_LINGUAS

2007-03-29  Claudio Saavedra  <csaavedra@alumnos.utalca.cl>

	* es/es.po: Updated Spanish translation by Jorge González.

2007-03-12  Maxim Dziumanenko <dziumanenko@gmail.com>

	* uk/uk.po: Updated Ukrainian translation.

2007-03-02  Christophe Bliard  <christophe.bliard@trux.info>

	* fr/fr.po: Updated French translation.

2007-02-17  David Lodge <dave@cirt.net>

	* en_GB/en_GB.po: Added (British) English translation.
	* Makefile.am: Added en_GB to DOC_LINGUAS

2007-01-23  Daniel Nylander <po@danielnylander.se>

	* sv/sv.po: Updated Swedish translation.

2007-01-22  Joachim Noreiko  <jnoreiko@yahoo.com>

	* C/sound-juicer.xml: Added list of stock genres. Patch from bryce@bryceharrington.org. #398904.

2006-10-23  Daniel Nylander <po@danielnylander.se>

	* sv/sv.po: Updated Swedish translation.

2006-10-13  Ross Burton  <ross@burtonini.com>

	* C/sound-juicer.xml:
	Use 192kbits instead of 196, which isn't a valid lame bitrate.

2006-09-03  Daniel Nylander <po@danielnylander.se>

	* sv/sv.po: Updated Swedish translation.

2006-09-02  Christophe Bliard  <christophe.bliard@trux.info>

	* fr/figures/startup.png: Updated screenshot.

2006-08-30  Daniel Nylander <po@danielnylander.se>

	* sv/sv.po: Updated Swedish translation

2006-08-25  Christophe Bliard  <christophe.bliard@trux.info>

	* fr/fr.po: Added French translation
	* fr/figures/prefs.png: Added file
	* fr/figures/startup.png: Added file

2006-08-19  Daniel Nylander <po@danielnylander.se>

	* sv/sv.po: Updated Swedish translation
	* sv/figures/prefs.png: Added file
	* sv/figures/startup.png: Added file
