@@ -203,7 +203,7 @@ Status: Draft
 
     <para>&application; indicates which track it is currently extracting by
     displaying an icon next to the track number.  You can also see the total
-    prograss and estimated time left in the status bar at the bottom of the
+    progress and estimated time left in the status bar at the bottom of the
     window.</para>
 
     <para>Extracting a CD can take a long time, depending on the speed of your
@@ -225,9 +225,9 @@ Status: Draft
     this at any time to pause the playing, and click <guibutton>Play</guibutton>
     again to continue playing where you left off.</para>
 
-    <para>While playing, &application; displays a progress bar showing the
-    position on the entire CD that is being played.  To skip to another part
-    of the CD, drag the handle along the progress bar.</para>
+    <para>While playing, &application; displays a slider showing the position 
+    on the current track.  To seek to another part of the track, drag the handle
+    along the slider and release.</para>
   </section>
 
   <section id="preferences">
@@ -240,7 +240,7 @@ Status: Draft
       one drive,</para></listitem>
       <listitem><para>Where the extracted audio files are placed on your
       computer, and</para></listitem>
-      <listitem><para>Which file format and codec is used for the extracted
+      <listitem><para>Which file format and codec are used for the extracted
       audio files.</para></listitem>
     </itemizedlist>
 
@@ -309,7 +309,7 @@ Status: Draft
 
       <variablelist>
         <varlistentry>
-          <term>CD Quality, Lossy (Ogg Vorbis audio)</term>
+          <term>CD Quality, Lossy (Ogg multimedia)</term>
           <listitem>
             <para>This option is selected by default.
             <ulink url="http://www.vorbis.org/">Ogg Vorbis</ulink>, like other
@@ -350,7 +350,7 @@ Status: Draft
         </varlistentry>
 
         <varlistentry>
-          <term>Voice (WAV audio)</term>
+          <term>Voice, Lossless (WAV audio)</term>
           <listitem>
             <para>The Voice output profile produces low-quality mono audio
             files.  You may wish to select this for lectures, books on tape,
