@@ -1,3 +1,9 @@
+2007-12-07  Rob Bradford  <rob@robster.org.uk>
+
+	* C/sound-juicer.xml:
+	Fix some errors in the manual. Fixes courtesy of Pedro de Medeiros.
+	Fixes bug: #484484.
+
 2007-10-20  Jonh Wendell  <jwendell@gnome.org>
 
 	* pt_BR/pt_BR.po: Added Brazilian Portuguese translation by 
